deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: PLACEHOLDER
  labels:
    app.kubernetes.io/part-of: todo-app
